Fix background-image overflow due to width size

--- a/style.css
+++ b/style.css
@@ -136,11 +136,26 @@ header>* {
     background-position: center;
 }
 
+.project-title {
+    align-self: flex-start;
+    font-family: 'Playfair Display', sans-serif;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 50px;
+    color: #1a2236;
+    line-height: 0.9;
+}
+
+.project-title p {
+    margin-left: 40px;
+    margin-right: 0px;
+}
+
 .bg-img {
-    width: 100vw;
+    width: 100%;
     height: 50vh;
     background-size: cover;
-    margin-top: 0;
+    margin: 0px;
     padding: 0;
     background-repeat: no-repeat;
     background-position: center;
@@ -167,23 +182,12 @@ header>* {
 }
 
 .card-details {
-    /* display: flex;
-    align-items: center;
-    margin-top: 0;
-    margin-bottom: -5px;
-    height: 40vh;
-    width: 100vw;
-    flex-direction: column;
-    flex-wrap: wrap;
-    background: #1a2236;
-    border: 0.333333px solid rgba(255, 255, 255, 0.1);
-    backdrop-filter: blur(1px); */
     display: flex;
     align-items: center;
-    margin-top: -100px;
-    margin-bottom: -5px;
     height: 40vh;
     width: 100%;
+    margin: 0;
+    padding: auto;
     flex-direction: column;
     flex-wrap: wrap;
     background: #1a2236;
@@ -207,15 +211,15 @@ h3 {
     justify-content: space-around;
     font-family: 'Poppins', sans-serif;
     font-size: 12px;
-    margin-left: auto;
-    margin-right: auto;
+    margin-left: 50px;
+    margin-right: 50px;
 }
 
 .language {
     font-family: 'Poppins', sans-serif;
     background: #98dede;
     margin: 10px;
-    padding: 10px;
+    padding: 15px;
     width: 50px;
     height: 15px;
     justify-self: center;
@@ -236,7 +240,8 @@ h3 {
     width: 178px;
     height: 44px;
     border: 1px solid #fff;
-    margin-left: 50px;
+    margin-left: auto;
+    margin-right: auto;
     color: white;
     margin-top: 50px;
 }
@@ -245,7 +250,8 @@ h3 {
     text-align: center;
     font-weight: bolder;
     margin-top: 11px;
-    margin-left: 10px;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .arrow {
